--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: /assets/img/logo.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-minimal
-remote_theme: pages-themes/minimal@v0.2.0
+theme: minima
+remote_theme: pages-themes/minima@v2.5.1
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
